--- a/Tickets.html
+++ b/Tickets.html
@@ -211,7 +211,7 @@
     <header id="header">
         <img src="DBLOGOWEIßklein.png" alt="DB Logo" class="header-logo">
         <nav>
-            <a href="Stindex.html">Startseite</a>
+            <a href="index.html">Startseite</a>
             <a href="Tickets.html">Tickets</a>
             <a href="#">Reiseziele</a>
             <a href="#">Kontakt</a>
