--- a/ticketg.html
+++ b/ticketg.html
@@ -220,7 +220,7 @@ h<!DOCTYPE html>
     <header id="header">
         <img src="DBLOGOWEIßklein.png" alt="DB Logo" class="header-logo">
         <nav>
-            <a href="Startseite.html">Startseite</a>
+            <a href="index.html">Startseite</a>
             <a href="Tickets.html">Tickets</a>
             <a href="#">Reiseziele</a>
             <a href="#">Kontakt</a>
