--- a/Tickets.html
+++ b/Tickets.html
@@ -221,7 +221,7 @@
     <!-- Ticketbuchung Formular -->
     <section class="ticket-form">
         <h2>Jetzt Tickets buchen</h2>
-        <form action="ticketg.html" method="POST">
+        <form action="fertig.html" method="POST">
             <div class="form-group">
                 <label for="from">Abfahrtsbahnhof:</label>
                 <select id="from" name="from" required>
