--- a/login-page.html
+++ b/login-page.html
@@ -62,7 +62,7 @@
 <body>
 
     <div class="login-container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Deutsche_Bahn_logo_2016.svg" alt="Deutsche Bahn Logo" class="logo">
+        <img src="dblogorotklein.png" alt="Deutsche Bahn Logo" class="logo">
         <h2>Login</h2>
         <form id="loginForm">
             <input type="text" id="username" placeholder="Benutzername" required>
@@ -77,11 +77,11 @@
     <script>
         // Benutzerkonten mit Benutzernamen und Passwörtern
         const users = {
-            "reisender123": "1234",
-            "zugfan2024": "2345",
-            "bahnhof_express": "3456",
-            "schnellfahrer56": "4567",
-            "bahnfreund88": "5678"
+            "admin": "1234",
+            "DB": "2345",
+            "ICE": "3456",
+            "IC": "4567",
+            "FlixTrain": "5678"
         };
 
         // Event-Listener für das Login-Formular
