--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                 // Weiterleitung zu Google nach 2 Sekunden
                 setTimeout(function() {
-                    window.location.href = 'https://www.google.com';
+                    window.location.href = 'https://xyswift-tools.github.io/DBSITE/start.html';
                 }, 2000); // 2 Sekunden warten
             } else {
                 // Fehlermeldung anzeigen, wenn die Anmeldedaten falsch sind
