--- a/start.html
+++ b/start.html
@@ -240,7 +240,7 @@
             <p>Erfahren Sie mehr über unsere moderne Zugflotte, inklusive ICE, IC und Regionalzüge.</p>
         </div>
         <div class="service">
-            <img src="https://via.placeholder.com/300x200" alt="Fahrkartenautomat">
+            <img src="https://player.vimeo.com/video/688428596?app_id=122963&referrer=https%3A%2F%2Fwww.whydobirds.de%2F" alt="Fahrkartenautomat">
             <h3>Tickets buchen</h3>
             <p>Kaufen Sie Ihre Fahrkarten online oder an unseren Automaten – einfach und schnell.</p>
         </div>
