--- a/start.html
+++ b/start.html
@@ -135,7 +135,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: white;
+            color: red;
             text-align: center;
             position: relative;
         }
