--- a/start.html
+++ b/start.html
@@ -138,6 +138,7 @@
             color: red;
             text-align: center;
             position: relative;
+            style :"font-family: "Arial Black"
         }
 
         .hero h2 {
