--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             // Überprüfen, ob der Benutzername und das Passwort übereinstimmen
             if (users[username] && users[username] === password) {
                 // Erfolgreicher Login
-                document.getElementById('dbSound').play(); // Sound abspielen
+                document.getElementById('DBSound.mp3').play(); // Sound abspielen
 
                 // Weiterleitung zu Google nach 2 Sekunden
                 setTimeout(function() {
