--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 document.getElementById('dbSound').play(); // Sound abspielen
 
                 setTimeout(function() {
-                    window.location.href = 'https://xyswift-tools.github.io/DBSITE/start.html';
+                    window.location.href = 'https://db-sites.github.io/DBSITE/start.html';
                 }, 2000); // 2 Sekunden warten
             } else {
                 // Fehlermeldung anzeigen, wenn der Code falsch ist
