--- a/start.html
+++ b/start.html
@@ -261,7 +261,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Deutsche Bahn. Alle Rechte vorbehalten. <a href="#">Datenschutz</a> | <a href="#">Impressum</a></p>
+        <p>&copy; 2024 DB-SITES.  <a href="Datenschutz">Datenschutz</a> | <a href="Impressum">Impressum</a></p>
     </footer>
 
     <script>
