--- a/Tickets.html
+++ b/Tickets.html
@@ -278,7 +278,7 @@
             const date = document.getElementById('date').value;
 
             // Umleitung auf die Indexseite
-            window.location.href = 'index.html';
+            window.location.href = 'danke.html';
         }
     </script>
 </body>
