--- a/Tickets.html
+++ b/Tickets.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deutsche Bahn - Ticketbuchung</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="DBLOGOWEIßklein.png">
+    <link rel="icon" type="image/png" href="dblogorotklein.png">
     <style>
         body {
             font-family: Arial, sans-serif;
