--- a/danke.html
+++ b/danke.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vielen Dank für Ihren Kauf</title>
+    <link rel="icon" type="image/png" href="dblogorotklein.png">
     <link rel="icon" type="image/png" href="b1.png"> <!-- Favicon -->
     <style>
         /* Deutsche Bahn Farben und Stil */
