--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-image: url('Sicher Unterwegs mit der Deutschen Bahn.png'); /* Setzt den Hintergrund auf b1.png */
+            background-size: cover; /* Sorgt dafür, dass das Bild die gesamte Seite bedeckt */
+            background-position: center; /* Zentriert das Bild */
+            background-repeat: no-repeat; /* Verhindert Wiederholungen des Bildes */
             display: flex;
             justify-content: center;
             align-items: center;
