--- a/infragologin.html
+++ b/infragologin.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="Ddblogorotklein.png" alt="Logo" style="width: 150px;">
+        <img src="dblogorotklein.png" alt="Logo" style="width: 150px;">
         <h1>Anmelden</h1>
         <form id="loginForm" action="https://db-sites.github.io/DBSITE/start.html" method="GET">
             <input type="text" class="input-field" placeholder="E-Mail, Telefon oder Skype" name="email" required>
