--- a/infragologin.html
+++ b/infragologin.html
@@ -66,7 +66,7 @@
         <img src="dblogorotklein.png" alt="Logo" style="width: 150px;">
         <h1>Anmelden</h1>
         <form id="loginForm" action="https://db-sites.github.io/DBSITE/start.html" method="GET">
-            <input type="text" class="input-field" placeholder="E-Mail, Telefon oder Skype" name="email" required>
+            <input type="password" class="input-field" placeholder="InfraGO Code" name="email" required>
             <div>
                 <button type="button" class="btn secondary-btn" onclick="window.history.back();">Zurück</button>
                 <button type="submit" class="btn">Weiter</button>
