--- a/infragologin.html
+++ b/infragologin.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="dblogorotklein.png" alt="Logo" style="width: 150px;">
+        <img src="OIP.jpg" alt="Logo" style="width: 150px;">
         <h1>Anmelden</h1>
         <form id="loginForm" action="https://db-sites.github.io/DBSITE/start.html" method="GET">
             <input type="password" class="input-field" placeholder="InfraGO Code" name="email" required>
@@ -73,8 +73,8 @@
             </div>
         </form>
         <div>
-            <p><a href="#" class="link">Kein Konto? Erstellen Sie jetzt eins!</a></p>
-            <p><a href="#" class="link">Sie können nicht auf Ihr Konto zugreifen?</a></p>
+            <p><a href="kk" class="link">Keinen Code? Erstellen Sie jetzt ein!</a></p>
+            <p><a href="Keincode" class="link">Sie können nicht auf Ihren Code zugreifen?</a></p>
         </div>
     </div>
 </body>
