--- a/infragologin.html
+++ b/infragologin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microsoft Anmelden</title>
+    <title>InfraGO Login</title>
     <link rel="icon" type="image/png" href="OIP.jpg">
     <style>
         body {
@@ -67,7 +67,7 @@
         <img src="OIP.jpg" alt="Logo" style="width: 150px;">
         <h1>Anmelden</h1>
         <form id="loginForm" action="https://db-sites.github.io/DBSITE/start.html" method="GET">
-            <input type="password" class="input-field" placeholder="InfraGO Code" name="email" required>
+            <input type="text" class="input-field" placeholder="InfraGO Code" name="email" required>
             <div>
                 <button type="button" class="btn secondary-btn" onclick="window.history.back();">Zurück</button>
                 <button type="submit" class="btn">Weiter</button>
