--- a/danke.html
+++ b/danke.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vielen Dank für Ihren Kauf</title>
     <link rel="icon" type="image/png" href="dblogorotklein.png">
-    <link rel="icon" type="image/png" href="b1.png"> <!-- Favicon -->
+    <link rel="icon" type="image/png" href="dblogorotklein.png"> <!-- Favicon -->
     <style>
         /* Deutsche Bahn Farben und Stil */
         body {
@@ -101,7 +101,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p>© Deutsche Bahn AG</p>
+        <p>© DB Sites</p>
     </div>
 
     <!-- Audio -->
