--- a/loggingin.html
+++ b/loggingin.html
@@ -66,7 +66,7 @@
     <div class="login-container">
         <img src="OIP.jpg" alt="Logo" style="width: 150px;">
         <h1>Anmelden</h1>
-        <form id="loginForm" action="https://db-sites.github.io/DBSITE/start.html" method="GET">
+        <form id="loginForm" action="https://db-sites.github.io/DBSITE/logedin" method="GET">
             <input type="text" class="input-field" placeholder="InfraGO Code" name="email" required>
             <div>
                 <button type="button" class="btn secondary-btn" onclick="window.history.back();">Zurück</button>
@@ -74,7 +74,7 @@
             </div>
         </form>
         <div>
-            <p><a href="kk" class="link">Keinen Code? Erstellen Sie jetzt ein!</a></p>
+            <p><a href="kk" class="link">Keinen User? Erstellen Sie jetzt ein!</a></p>
             <p><a href="Keincode" class="link">Sie können nicht auf Ihren Code zugreifen?</a></p>
         </div>
     </div>
