--- a/logedin.html
+++ b/logedin.html
@@ -79,7 +79,7 @@
         };
 
         // Fortschrittsstufen
-        const stages = ["Neustarter", "Starter", "Durchstarter", "Sprinter", "Champion", "Admin"];
+        const stages = ["Neustarter", "Starter", "Durchstarter", "Sprinter", "Champion", "Lehrer"];
 
         // E-Mail aus der URL abrufen
         const email = getQueryParameter("email");
